Start basic example

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <style>
         #diagram {
-            width: 3840px;
-            height: 2160px;
+            width: 384px;
+            height: 216px;
         }
+
+        .diagram .box {
+            border: 10px solid #ffffff;
+        }
+
+        .red { background: #ff0000; }
+        .rounded { border-radius: 25px; }
     </style>
 </head>
 <body>
