--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div id="diagram"></div>
-    <script src="dist/drox.js"></script>
-    <script src="dist/example.js"></script>
+    <script src="dist/drox.js" type="module"></script>
+    <script src="dist/example.js" type="module"></script>
 </body>
 </html>
